--- a/FinancialEnterpriseGenie.csproj
+++ b/FinancialEnterpriseGenie.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <Folder Include="Models\" />
     <Folder Include="Controllers\" />
+    <Folder Include="wwwroot\" />
     <Folder Include="Views\Home\" />
   </ItemGroup>
 
